--- a/index.html
+++ b/index.html
@@ -4,14 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9RYGRGVQXF"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-9RYGRGVQXF');
-    </script>
+    <script data-goatcounter="https://satishkhanal76.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
     <title>Satish - Portfolio</title>
   </head>
   <body>
